// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrComment Component should display Customer interaction 1`] = `
<div
  className="PrComment-collapsen-10"
>
  <div
    className="PrComment-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrComment-nestedTextSelect-8"
    >
      <WithStyles(PrTextField)
        id="CUSTOMER_INTERACTION_CommentId"
        label="Kundeninteraktion und -veränderung"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="iii"
        startrows="2"
        writeableText="iii"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-6"
    />
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrComment-iconComment-4"
        id="CUSTOMER_INTERACTION_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CUSTOMER_INTERACTION"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display ProblemAnalysis 1`] = `
<div
  className="PrComment-collapsen-10"
>
  <div
    className="PrComment-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrComment-nestedTextSelect-8"
    >
      <WithStyles(PrTextField)
        id="PROBLEM_ANALYSIS_CommentId"
        label="Problemanalyse und -lösung"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="ggg"
        startrows="2"
        writeableText="ggg"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-6"
    />
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrComment-iconComment-4"
        id="PROBLEM_ANALYSIS_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="PROBLEM_ANALYSIS"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display Teamwork 1`] = `
<div
  className="PrComment-collapsen-10"
>
  <div
    className="PrComment-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrComment-nestedTextSelect-8"
    >
      <WithStyles(PrTextField)
        id="TEAMWORK_CommentId"
        label="Effektives Arbeiten im Team und Teamführung"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="fff"
        startrows="2"
        writeableText="fff"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-6"
    />
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrComment-iconComment-4"
        id="TEAMWORK_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="TEAMWORK"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display the ContributionToCompanyDevelopment 1`] = `
<div
  className="PrComment-collapsen-10"
>
  <div
    className="PrComment-containerListItem-2"
  >
    <WithStyles(ListItem)
      className="PrComment-nestedTextSelect-8"
    >
      <WithStyles(PrTextField)
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentId"
        label="Beitrag zur Unternehmensentwicklung"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="hhh"
        startrows="2"
        writeableText="hhh"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-6"
    />
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedInfo-7"
      onClick={[Function]}
    >
      <WithStyles(Icon)
        className="PrComment-iconComment-4"
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;
